# UrbanPlansAssistant

./: .gitignore  README.md  alternative_parsing.ipynb  doc_parsing.ipynb  llm_agent.ipynb  pyproject.toml  tag_creation.ipynb  text_wit tables.ipynb
llm_agent/: __init__.py  llm_agent.py  pandas_llm_agent.py
